syntax = "proto3";

option csharp_namespace = "GrpcService1";

package cart;

service Carter {
  rpc ListDishCartQuery (GetListCartRequest) returns (GetListCartReply);
  rpc GetQuantity (GetListCartRequest) returns (GetQuantityReply);
}

message CartRestaurantReply {
	string Name = 1;
	string Phone = 2;
	string Address = 3;
}

message GetCartDetail {
	string Id = 1;
	string RestaurantId = 2;
	string CustomerId = 3;
	string DishId = 4;
	CartRestaurantReply Restaurant = 5;
	string Name = 6;
	string Image = 7;
	int64 Price = 8;
	int32 Quantity = 9;
}

message GetListCartRequest {
	string CustomerId = 1;
}

message GetListCartReply {
	repeated GetCartDetail List = 1;
}

message GetQuantityReply{
	int32 Quantity = 1;
}
